# mnheme

./: .env.example  LICENSE.md  README.md  README_MCP.md  advanced_human_simulator_memories_generator.py  brain.py  examples.py  filestore.py  fsprobe.py  index.py  llm_provider.py  memories_generator.py  mente-studio-allMcp.index.json  mente-studio-allMcp.mnheme  mente-studio-fetch.index.json  mente.index.json  mente.mnheme  mnheme.index.json  mnheme.mnheme  mnheme.py  mnheme.service  mnheme_api.py  mnheme_benchmark.py  mnheme_live.py  mnheme_live_kokoro.py  mnheme_mcp.py  mnheme_pr.sh  simple_memories_generator.py  start.bat  start.sh  storage.py  test_fsprobe.py  test_integration.py  test_llm_provider.py  test_local_provider.py  test_personality.py  test_vision.py  voices
.claude/: settings.local.json
.claude/agents/: workflow-orchestrator.md
apps/conversation_ingester/: README.md  conversation_ingester.py
apps/drift/: README.md  app.js  app.min.js  index.html  index.min.html  style.css  style.min.css
apps/echo/: README.md  app.js  index.html  style.css
apps/memoria/: README.md  app.js  index.html  style.css
docs/: README_advanced_human_simulator_memories_generator.md  README_generator.md  README_simple_memories_generator.md  cognitive-functions.md  llm-providers-free-tiers.md
localwebapp/: api.css  api.html  api.js  i18n.js  index.html
mnheme-web/: index.html  package-lock.json  package.json
mnheme_ports/: README.md
mnheme_ports/rust/: Cargo.toml
mnheme_ports/rust/src/: index.rs  lib.rs  main.rs  mnheme.rs  storage.rs
tasks/: todo.md
(+82 files in other folders)
