[package]
name    = "mnheme"
version = "0.1.0"
edition = "2021"
description = "Human memory as a data model — append-only binary log"

[[bin]]
name = "mnheme"
path = "src/main.rs"

[lib]
name = "mnheme"
path = "src/lib.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
sha2        = "0.10"
regex       = "1"
